--- a/apps/market/templates/market/designs.html
+++ b/apps/market/templates/market/designs.html
@@ -76,14 +76,12 @@
                     <ul class="navbar-nav">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Men</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Women</a>
+                        <a class="nav-link" href="/">Designs</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Kids</a>
-                    </li>  
+ 
                     
                     {% if 'user_id' in request.session %}
                     <li class="nav-item dropdown">
