--- a/apps/market/templates/market/newdesign.html
+++ b/apps/market/templates/market/newdesign.html
@@ -27,15 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav justify-content-end">
 
-                    <li class="nav-item">
-                      <a class="nav-link" href="/">Men</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/">Women</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Kids</a>
-                    </li>  
+                        <li class="nav-item">
+                                <a class="nav-link" href="/">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/">Designs</a>
+                            </li>
+         
                     
                     {% if 'user_id' in request.session %}
                     <li class="nav-item dropdown">
