--- a/apps/market/templates/market/newdesign.html
+++ b/apps/market/templates/market/newdesign.html
@@ -123,27 +123,47 @@
                             <div class="form-group col-md-6">
                                     <label for="inputCategory">Categories</label>
                                     <select multiple="multiple" class="form-control" id="inputCategory" name="category" style="height:82%; margin-bottom: 5px;">
-                                        <option>Tattoo</option>
-                                       
-                                        <option>Heraldry</option>
-                                        <option>Holiday</option>
-                                        
-                                        <option>Religious</option>
-                                        
-                                        <option>Sports</option>
-                                       
-                                        <option>Funny</option>
-                                        <option>Artistic</option>
-                                        <option>Comics</option>
-                                       
-                                        <option>Retro</option>
-                                        <option>Sci-Fi</option>
-                                       
-                                        <option>Anime</option>
-                                        <option>Animals</option>
-                                        <option>Patriotic</option>
-                                        <option>Cars</option>
-                  
+                                            <option>Tattoo style</option>
+                                            <option>Bad Bones Crew</option>
+                                            <option>Bikers</option>
+                                            <option>Characters</option>
+                                            <option>Heraldry</option>
+                                            <option>Holiday</option>
+                                            <option>Photoshop</option>
+                                            <option>Religious</option>
+                                            <option>Skulls</option>
+                                            <option>Sports</option>
+                                            <option>Typography</option>
+                                            <option>Urban</option>
+                                            <option>Patterns</option>
+                                            <option>Funny</option>
+                                            <option>Art Style</option>
+                                            <option>Comics</option>
+                                            <option>Pop Culture</option>
+                                            <option>Retro</option>
+                                            <option>Sci-Fi &amp; Fantasy</option>
+                                            <option>Gym</option>
+                                            <option>Abstract</option>
+                                            <option>Anime</option>
+                                            <option>Birds</option>
+                                            <option>Cats</option>
+                                            <option>Cool</option>
+                                            <option>Food &amp; Drink</option>
+                                            <option>Gaming</option>
+                                            <option>Horror</option>
+                                            <option>Monsters</option>
+                                            <option>Music</option>
+                                            <option>Zombies</option>
+                                            <option>Cars</option>
+                                            <option>Yoga</option>
+                                            <option>Miscellaneous</option>
+                                            <option>Nature</option>
+                                            <option>Geek</option>
+                                            <option>Camping</option>
+                                            <option>Love</option>
+                                            <option>Pregnancy</option>
+                                            <option>Party</option>
+                                            <option>Animals</option>
                                     </select>
                                     <small id="inputCategory" class="form-text text-muted">
                                             You can pick up to 3 categories.
