--- a/apps/market/templates/market/newdesign.html
+++ b/apps/market/templates/market/newdesign.html
@@ -108,7 +108,7 @@
                             
                             <div class="col" style="margin-top:5px;">
                                     <input type="file" class="custom-file-input" id="designFile" name="design_file">
-                                    <label class="custom-file-label" for="designFile">Choose file - Display Image</label>
+                                    <label class="custom-file-label" for="designFile">Choose file - Design File</label>
                                     <small id="designFile" class="form-text text-muted">
                                             This is the design file issued with the license, please use a png or jpg.
                                     </small>
