updated views, tested cart w/ session

--- a/apps/market/templates/market/test.html
+++ b/apps/market/templates/market/test.html
@@ -12,7 +12,9 @@
     <input name="name" value="{{request.GET.name}}">
     <button type="submit">Go</button>
     </form>
-
+    {% for item in request.session.cart %}
+        {{item}}
+    {% endfor %}
     <hr>
     
 </body>
