--- a/apps/market/templates/market/index.html
+++ b/apps/market/templates/market/index.html
@@ -84,7 +84,7 @@
                     </li> 
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Cart (0)</a>
+                        <a class="nav-link" href="/">Cart ({{request.session.cart | length}})</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/">Checkout</a>
