added design view with query params

--- a/apps/market/templates/market/newdesign.html
+++ b/apps/market/templates/market/newdesign.html
@@ -31,7 +31,7 @@
                                 <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/">Designs</a>
+                                <a class="nav-link" href="/designs">Designs</a>
                             </li>
          
                     
@@ -123,47 +123,9 @@
                             <div class="form-group col-md-6">
                                     <label for="inputCategory">Categories</label>
                                     <select multiple="multiple" class="form-control" id="inputCategory" name="category" style="height:82%; margin-bottom: 5px;">
-                                            <option>Tattoo style</option>
-                                            <option>Bad Bones Crew</option>
-                                            <option>Bikers</option>
-                                            <option>Characters</option>
-                                            <option>Heraldry</option>
-                                            <option>Holiday</option>
-                                            <option>Photoshop</option>
-                                            <option>Religious</option>
-                                            <option>Skulls</option>
-                                            <option>Sports</option>
-                                            <option>Typography</option>
-                                            <option>Urban</option>
-                                            <option>Patterns</option>
-                                            <option>Funny</option>
-                                            <option>Art Style</option>
-                                            <option>Comics</option>
-                                            <option>Pop Culture</option>
-                                            <option>Retro</option>
-                                            <option>Sci-Fi &amp; Fantasy</option>
-                                            <option>Gym</option>
-                                            <option>Abstract</option>
-                                            <option>Anime</option>
-                                            <option>Birds</option>
-                                            <option>Cats</option>
-                                            <option>Cool</option>
-                                            <option>Food &amp; Drink</option>
-                                            <option>Gaming</option>
-                                            <option>Horror</option>
-                                            <option>Monsters</option>
-                                            <option>Music</option>
-                                            <option>Zombies</option>
-                                            <option>Cars</option>
-                                            <option>Yoga</option>
-                                            <option>Miscellaneous</option>
-                                            <option>Nature</option>
-                                            <option>Geek</option>
-                                            <option>Camping</option>
-                                            <option>Love</option>
-                                            <option>Pregnancy</option>
-                                            <option>Party</option>
-                                            <option>Animals</option>
+                                        {% for c in cats %}
+                                        <option>{{c}}</option>
+                                        {% endfor %}
                                     </select>
                                     <small id="inputCategory" class="form-text text-muted">
                                             You can pick up to 3 categories.
