--- a/apps/market/templates/market/design.html
+++ b/apps/market/templates/market/design.html
@@ -39,7 +39,7 @@
                                     <a class="nav-link" href="/">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/">Designs</a>
+                                    <a class="nav-link" href="/designs">Designs</a>
                                 </li>
              
                          
