--- a/apps/market/templates/market/designs.html
+++ b/apps/market/templates/market/designs.html
@@ -1,4 +1,5 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,36 +16,9 @@
     .black-opacity:hover{
         background-color:rgba(0, 0, 0, 0.5);
     }
-
-    #cat-list li {
-        padding: 5px;
-        font-size:.8em;
-    }
-
-    .table {
-        border-radius: 5px;
-    }
-    .table > thead > tr > th {
-        border-top: 0px !important;
-        vertical-align: middle;
-        text-align: center;
-    }
-    .table > tbody > tr > td  {
-     vertical-align: middle;
-     text-align: center;
-    }
-
-/*     img {
-        max-width:125px;
-        max-height:125px;
-        width: auto;
-        height: auto;
-        overflow: hidden;
-    } */
-
     .test {
         overflow: hidden;
-        max-width: 135px;
+        max-width: 100%;
         height: auto;
         margin: 0 auto;
         background-color: #fff;
@@ -53,17 +27,25 @@
     }
 
     .tower {
-    width: 135px;
-    height: 135px;
+    width: 100%;
+    height: 500px;
     }
 
     .img-thumbnail2 {
         max-width: 100%;
         height: auto;
     }
-    
-    </style>
 
+    .oldprice {
+        text-decoration: line-through;
+    }
+
+    .reduce {
+        font-size: .6em;
+    }
+   
+
+    </style>
 </head>
 <body>
  
@@ -74,14 +56,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Designs</a>
-                    </li>
- 
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/designs">Designs</a>
+                        </li>
+     
                     
                     {% if 'user_id' in request.session %}
                     <li class="nav-item dropdown">
@@ -108,7 +89,7 @@
                     </li> 
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Cart (0)</a>
+                        <a class="nav-link" href="/">Cart ({{request.session.cart | length}})</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/">Checkout</a>
@@ -117,95 +98,56 @@
                     </ul>
             </div>
         </nav>
-        <hr>
     <div class="container-fluid">
-       <div class="row">
-            <div class="col">
-                <table class="table table-hover table-light">
-                    <thead>
-                      <tr>
-                        <th scope="col">Design</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Licenses</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Orders</th>
-                        <th scope="col">Revenue</th>
-                        <th scope="col">Actions</th>
-                      </tr>
-                    </thead>
-                    <tbody class="align-middle">
-                        {% for design in designs %}
-                            <tr >
-                                
-                                <td><div class="test tower"><a href="/{{design.id}}"><img src="{% static design.display_image %}" class="img-thumbnail2"></a></div></td>
-                                <td>{{design.name}}</td>
-                                <td>{{design.licenses}}</td>
-                                {% if design.on_sale %}
-                                    <td>${{design.sale_price}}</td>
-                                {% else %}
-                                <td>${{design.price}}</td>
-                                {% endif %}
-                                <td>{{design.sales}}</td>
-                                <td>${{design.total_revenue}}</td>
-                                
-                                
-                                <td>    
-                                        <a href="/{{design.id}}">
-                                            <button type="button" class="btn btn-secondary btn-sm" data-container="body" data-toggle="popover" data-placement="top" data-content="View how your listing looks to the public." data-trigger="hover">View</button></a>
-                                        <a href="/portfolio/{{request.session.user_id}}/edit/{{design.id}}">
-                                            <button type="button" class="btn btn-secondary btn-sm" data-container="body" data-toggle="popover" data-placement="top" data-content="Edit the design, add more licenses or delete listing completely." data-trigger="hover">Edit</button></a>
-                                        {% if design.paused %}    
-                                        <a href="/portfolio/{{request.session.user_id}}/pause/{{design.id}}">
-                                            <button type="button" class="btn btn-secondary btn-sm" data-container="body" data-toggle="popover" data-placement="top" data-content="Unpause to sell again and add to public listings." data-trigger="hover">Unpause</button></a>
-                                        {% else %}      
-                                        <a href="/portfolio/{{request.session.user_id}}/pause/{{design.id}}">
-                                            <button type="button" class="btn btn-secondary btn-sm" data-container="body" data-toggle="popover" data-placement="top" data-content="Pause sales and temporarily remove from public listings." data-trigger="hover">Pause</button></a>
-                                        {% endif %}
-                                        {% if design.on_sale %}    
-                                        <a href="/portfolio/{{request.session.user_id}}/sale/{{design.id}}">
-                                            <button type="button" class="btn btn-secondary btn-sm" data-container="body" data-toggle="popover" data-placement="top" data-content="Remove 10% discount and list at regular price." data-trigger="hover">Remove Discount</button></a>
-                                        {% else %}      
-                                        <a href="/portfolio/{{request.session.user_id}}/sale/{{design.id}}">
-                                            <button type="button" class="btn btn-secondary btn-sm" data-container="body" data-toggle="popover" data-placement="top" data-content="Put this item on sale, we apply a 10% discount based on the list price." data-trigger="hover">Discount</button></a>
-                                        {% endif %}
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                  </table>
-                  
-                </div>
-       </div>
-       <div class="row justify-content-md-center">
-           <div class="col-2">
-                {% if designs.has_other_pages %}
-                <ul class="pagination">
-                    {% if designs.has_previous %}
-                    <li class="page-item"><a href="?page={{ designs.previous_page_number }}" class="page-link">&laquo;</a></li>
-                    {% else %}
-                    <li class="page-item disabled"><span class="page-link">&laquo;</span></li>
-                    {% endif %}
-                    {% for i in designs.paginator.page_range %}
-                    {% if designs.number == i %}
-                        <li class="active page-item"><span><a href="?page={{ i }}" class="page-link">{{ i }}</a> <span class="sr-only">(current)</span></span></li>
-                    {% else %}
-                        <li lass="page-item"><a href="?page={{ i }}" class="page-link">{{ i }}</a></li>
-                    {% endif %}
-                    {% endfor %}
-                    {% if designs.has_next %}
-                    <li class="page-item"><a href="?page={{ designs.next_page_number }}" class="page-link">&raquo;</a></li>
-                    {% else %}
-                    <li class="page-item disabled"><span class="page-link">&raquo;</span></li>
-                    {% endif %}
-                </ul>
-                {% endif %}
+        <hr>
 
-           </div>
-       </div>
+
+
+        <div class="row">
+                <div class="container-fluid">
+                        <div class="row">
+                            <div class="col">
+                                    {% if current_cat %}
+                                    <a href="/designs"><button type="button" class="btn btn-secondary btn-sm reduce">All</button></a>
+                                    {% else %}
+                                    <a href="/designs"><button type="button" class="btn btn-primary btn-sm reduce">All</button></a>
+                                    {% endif %}
+                                    {% for c in cats %}
+                                        {% if current_cat == c %}
+                                            <a href="?cat={{c}}"><button type="button" class="btn btn-primary btn-sm reduce">{{c}}</button></a>
+                                        {% else %}
+                                            <a href="?cat={{c}}"><button type="button" class="btn btn-secondary btn-sm reduce">{{c}}</button></a>
+                                        {% endif %}
+                                    {% endfor %}
+                                    <hr>
+                            </div>
+                        </div>
+                        <div class="row">
+                                {% for design in designs %}
+                                <div class="col-lg-3">
+                                      <div class="card">
+                                          <h5 class="card-header">{{design.name}}</h5>
+                                          <div class="card-body">
+                                                  <img src="{% static design.display_image %}" class="img-thumbnail">
+                                                  <hr>
+                                            <div class="float-right"><a href="/{{design.id}}" class="btn btn-primary btn-sm">View</a> <a href="#" class="btn btn-warning btn-sm">Buy</a>  </div> <h5 class="card-title"><b>${{design.price}}</b></h5>
+                                          </div>
+                                      </div>
+                                      <br>
+                                </div>
+                                {% endfor %}
+                        </div>
+                     </div>
+        </div>
+
+
+        <hr>
+        <div class="row">
+            <div class="col text-center">www.shirtatlas.com</div>
+        </div>
+        <hr>
 
     </div>
-
-
 
 
 
@@ -215,10 +157,5 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-    <script>
-            $(function () {
-                $('[data-toggle="popover"]').popover()
-            })
-        </script>
 </body>
 </html>
