--- a/apps/market/templates/market/edit.html
+++ b/apps/market/templates/market/edit.html
@@ -31,7 +31,7 @@
                                 <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/">Designs</a>
+                                <a class="nav-link" href="/designs">Designs</a>
                             </li>
          
                     
