--- a/apps/market/templates/market/index.html
+++ b/apps/market/templates/market/index.html
@@ -51,12 +51,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/">Designs</a>
-                        </li>
+                            <li class="nav-item">
+                                    <a class="nav-link" href="/">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/designs">Designs</a>
+                                </li>
      
                     
                     {% if 'user_id' in request.session %}
@@ -145,51 +145,7 @@
                     {% endfor %}
                 
             </div>
-<!--         <hr>
-        <h2><span class="badge badge-warning">On Sale</span></h2>
 
-        <div class="card-group">
-                <div class="card">
-                  <img class="card-img-top" src="https://s3.us-east-2.amazonaws.com/shirt-atlas/m-s.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Shirts for Men</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    
-                  </div>
-                </div>
-                <div class="card">
-                  <img class="card-img-top" src="https://s3.us-east-2.amazonaws.com/shirt-atlas/w-s.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Shirts for Women</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    
-                  </div>
-                </div>
-                <div class="card">
-                  <img class="card-img-top" src="https://s3.us-east-2.amazonaws.com/shirt-atlas/kid-s.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Shirts for Kids</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    
-                  </div>
-                </div>
-                <div class="card">
-                        <img class="card-img-top" src="https://s3.us-east-2.amazonaws.com/shirt-atlas/kid-s.jpg" alt="Card image cap">
-                        <div class="card-body">
-                          <h5 class="card-title">Shirts for Kids</h5>
-                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                          
-                        </div>
-                </div>
-                <div class="card">
-                            <img class="card-img-top" src="https://s3.us-east-2.amazonaws.com/shirt-atlas/kid-s.jpg" alt="Card image cap">
-                            <div class="card-body">
-                              <h5 class="card-title">Shirts for Kids</h5>
-                              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                              
-                            </div>
-                 </div>                     
-        </div> -->
         <hr>
         <div class="row">
             <div class="col text-center">www.shirtatlas.com</div>
