--- a/apps/market/templates/market/login.html
+++ b/apps/market/templates/market/login.html
@@ -30,10 +30,10 @@
 
                     <li class="nav-item">
                             <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Designs</a>
-                    </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/designs">Designs</a>
+                        </li>
      
                 
                 {% if 'user_id' in request.session %}
